<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="Test Component One AI Image"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="62dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="120dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:orientation="horizontal">

                <com.grebtsew.feedbackSDK.AiImage
                    android:id="@+id/aiimage"
                    android:layout_width="131dp"
                    android:layout_height="match_parent"
                    
                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Enter Integer Here" />

                <EditText
                    android:id="@+id/editTextNumberSigned"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Enter String Here" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    tools:layout_editor_absoluteX="176dp"
                    tools:layout_editor_absoluteY="102dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Number of Images Found" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="44dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="Test Component Two Voice to Text Button"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="62dp" />

        <com.grebtsew.feedbackSDK.VoiceToTextButton
            android:id="@+id/voicetotextbutton"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            app:Language="sv_SE">

        </com.grebtsew.feedbackSDK.VoiceToTextButton>


        <TextView
            android:id="@+id/latestVoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Latest Said words will be displayed here!" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/allVoice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Everything said will be displayed here!" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="Test Component Three FeedbackView"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="62dp" />

        <com.grebtsew.feedbackSDK.FeedbackView
            android:layout_width="match_parent"
            android:layout_height="100dp"

            >

        </com.grebtsew.feedbackSDK.FeedbackView>

        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="Test Component Four Integration Test"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="62dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.grebtsew.feedbackSDK.AiImage
                android:id="@+id/integratedAIimage"
                android:layout_width="100dp"
                android:layout_height="100dp"></com.grebtsew.feedbackSDK.AiImage>

            <com.grebtsew.feedbackSDK.VoiceToTextButton
                android:id="@+id/integratedVoiceToTextButton"
                android:layout_width="50dp"
                android:layout_height="100dp"></com.grebtsew.feedbackSDK.VoiceToTextButton>

            <com.grebtsew.feedbackSDK.FeedbackView
                android:id="@+id/integratedFeedbackView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"></com.grebtsew.feedbackSDK.FeedbackView>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

</ScrollView>